<resources>
  <string name="app_name">Gas Stations</string>
  <string name="map_activity_title">Add refuel</string>

  <string name="default_title">Sync service working</string>
  <string name="waiting_title">Waiting fo internet connection</string>
  <string name="database_path">refuels</string>
  <string name="notification_channel_id">gas_stations</string>
  <string name="notification_channel_name">gas_stations</string>
  <string name="database_url">"https://gas-stations-775de-default-rtdb.europe-west1.firebasedatabase.app"</string>


  <string name="refuels_list">Refuels list</string>
  <string name="station_statistics">Station statistics</string>

  <string name="fuel_volume">Fuel volume:\u0020</string>
  <string name="brand">Brand:\u0020</string>
  <string name="station_address">Station coordinates:\u0020</string>
  <string name="station_visits">Visits:\u0020</string>
  <string name="total_fuel">Total fuel filled:\u0020</string>
  <string name="units">\u0020gal</string>
  <string name="currency">\u0020$</string>

  <string name="add_refuel">Add new refuel</string>
  <string name="refuel">Refuel</string>
  <string name="fuel_price">Price per gallon:</string>
  <string name="fuel_type">Fuel type:</string>

  <string name="edit_refuel">Edit refuel</string>
  <string name="add">Add</string>
  <string name="update">Update</string>
  <string name="cancel">Cancel</string>

  <string name="aim_to_station">Place gas station at aim and press \"Refuel\"</string>


  <string name="add_gas_station">Add gas station</string>
  <string name="aim_image">Center of map</string>
  <string-array name="fuel_types">
    <item>Diesel</item>
    <item>Gas 87</item>
    <item>Gas 89</item>
    <item>Gas 91</item>
    <item>LPG</item>
  </string-array>

</resources>