<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="10dp"
  android:stretchColumns="1, 3">

  <TableRow
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/textView"
      style="@style/dialog_caption_text_style"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_span="4"
      android:gravity="center"
      android:text="@string/edit_refuel" />
  </TableRow>

  <TableRow
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/text_fuel_type"
      style="@style/dialog_main_text_style"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingRight="10dp"
      android:text="@string/fuel_type" />

    <Spinner
      android:id="@+id/spinner_fuel_type"
      style="@style/dialog_main_text_style"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_span="3"
      android:entries="@array/fuel_types" />
  </TableRow>

  <TableRow
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/text_fuel_volume"
      style="@style/dialog_main_text_style"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingRight="10dp"
      android:text="@string/fuel_volume" />

    <EditText
      android:id="@+id/edit_volume"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_span="3"
      android:ems="10"
      android:inputType="numberDecimal"
      android:imeOptions="actionNext"
      android:nextFocusForward="@id/edit_price" />
  </TableRow>

  <TableRow
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/text_price"
      style="@style/dialog_main_text_style"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingRight="10dp"
      android:text="@string/fuel_price" />

    <EditText
      android:id="@+id/edit_price"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_span="3"
      android:ems="10"
      android:inputType="numberDecimal"
      android:imeOptions="actionDone"/>
  </TableRow>

  <TableRow
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
      android:id="@+id/btn_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_column="0"
        android:layout_gravity="left"
      android:text="@string/cancel" />

    <Button
      android:id="@+id/btn_update"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
        android:layout_gravity="right"
      android:layout_column="1"
      android:text="@string/update" />
  </TableRow>

</TableLayout>